--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body bgcolor="green">
      <h1>Selamat Berbuka Puasa</h1>
      <p>Kalau udah buka sih...</p>
+     <h2>Tapi masih lama</h2>
 </body>
 </html>
